<resources>
    <string name="shopping_areas">全部商区</string>
    <string name="preface">智能排序</string>
    <string name="sieve">筛选</string>
    <string name="wff_password">密码</string>
    <string name="wff_reserve_password_hint">6-20位字母和数字</string>
    <string name="wff_relevant_why_text">如你有机构入驻,发布活动,发布场馆的需要</string>
    <string name="wff_why_text">请留下你的联系方式:</string>
    <string name="wff_submit">提交</string>
    <string name="wff_activity_profile_activity_details">活动详情</string>
    <string name="button_refresh">点击刷新</string>
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <string name="string_money">&#165;</string>
    <string name="tream_no_contentshow">如您有需要，请到所在街道或社区活动中心进行登记申请成为团体，并开通账号，感谢您的使用。</string>
    <string name="tream_no_titleshow">场馆预订只针对团体用户开放，请多谅解！</string>
    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_title_tts_speed">语速</string>
    <string name="preference_default_tts_speed">50</string>
    <string name="preference_dialog_title_tts_speed">选择语速</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_title_tts_volume">音量</string>
    <string name="preference_default_tts_volume">50</string>
    <string name="preference_dialog_title_tts_volume">选择音量</string>
    <string name="preference_key_tts_pitch">tts_pitch</string>
    <string name="preference_title_tts_pitch">语调</string>
    <string name="preference_default_tts_pitch">50</string>
    <string name="app_id">输入您讯飞的appid</string>
    <string name="loadint_text">加载中</string>
    <string name="loadint_restart">点我刷新</string>
    <string name="app_name">文化云</string>
    <string name="action_settings">Settings</string>
    <string name="metting">会议</string>
    <string name="metting1">舞蹈</string>
    <string name="metting2">武术</string>
    <string name="writecomment_label">欢迎留下宝贵的意见</string>
    <string name="index_activity_label">RECOMMENDED ACTIVITIES 活动推荐</string>
    <string name="index_venue_label">RECOMMENDED VENUES 场馆推荐</string>
    <string name="index_label">文化馆</string>
    <string name="seat_online">在线选座：</string>
    <string name="culture_seat">五排六座 7排9座 九排20座</string>
    <string name="culture_seat_center">中 心 舞 台</string>
    <string name="seat">五排六座 7排9座 九排20座</string>
    <string name="seat_t1">可 选</string>
    <string name="seat_t2">已 选</string>
    <string name="seat_t3">已 售</string>
    <string name="seat_t4">占 用</string>
    <string name="seat_center">中 心 舞 台</string>
    <string name="seat_maxnumber">一次最多购买5张票</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_content_text">标题</string>
    <string name="more_choose">更多选择条件</string>
    <string name="more_choose1">索 引 更 多 活 动</string>
    <string name="more_venue">索 引 更 多 场 馆</string>
    <string name="main_list_foot">查 看 更 多</string>
    <string name="list_foot">- - - - -  已 经 加 载 完 了 哦   - - - - -</string>
    <string name="list_foot_venue">- - - - -  已 经 加 载 完 了 哦   - - - - -</string>
    <string name="list_foot_group">- - - - -  今 日 团 体 已 结 束   - - - - -</string>
    <string name="list_foot_notinvoluntary">- - - - -  今 日 非 遗 已 结 束   - - - - -</string>
    <string name="list_foot_comment">- - - - -  评 论 已 加 载 完 成   - - - - -</string>
    <string name="list_foot_more">- - - - -  点 击 加 载 更 多   - - - - -</string>
    <string name="list_foot_load">加 载 中....</string>
    <string name="main_grid_text">亲子时光</string>
    <string name="personal_name_text">张萌萌VV</string>
    <string name="personal_time_text">2015-12-20 15:30</string>
    <string name="personal_my_event_text">我的活动</string>
    <string name="personal_my_venue_text">我的场馆</string>
    <string name="personal_my_collect_text">我的收藏</string>
    <string name="personal_my_group_text">我的团体</string>
    <string name="personal_setting_text">个人设置</string>
    <string name="personal_feedback_text">意见反馈</string>
    <string name="personal_my_mesge_text">我的消息</string>
    <string name="personal_admin_text">黄浦区老年人歌舞团管理员</string>
    <string name="table_nearby">附 近</string>
    <string name="nearby_map_amplification">放大</string>
    <string name="nearby_map_narrow">缩小</string>
    <string name="table_selected">最 新</string>
    <string name="table_hot">热 门</string>
    <string name="test_main_listitem_title">回声-奥利维艾罗雕塑展</string>
    <string name="test_main_listitem_address">地址：上海市黄浦区南京西路231号人民公园7号</string>
    <string name="test_main_listitem_value">50</string>
    <string name="main_grid_tex213t">亲子时光</string>
    <string name="user_nick_text">昵称</string>
    <string name="user_sex_text">性别</string>
    <string name="user_name_text">账号</string>
    <string name="user_sex_text_test">女</string>
    <string name="user_birthday_text">年龄</string>
    <string name="user_birthday_text_test">1990-05-05&#160;&#160;90后</string>
    <string name="user_bind_phone_text">手机</string>
    <string name="user_bind_email_text">绑 定 邮 箱</string>
    <string name="user_bind_third_text">第三方帐号</string>
    <string name="user_bind_thirdf_text">立即绑定</string>
    <string name="weixin">微信账号</string>
    <string name="weibo">微博账号</string>
    <string name="qq">QQ账号</string>
    <string name="bind_weixin">微信</string>
    <string name="bind_weibo">微博</string>
    <string name="bind_qq">QQ</string>
    <string name="bind_yes">已绑定</string>
    <string name="bind_no">未绑定</string>
    <string name="bing_introduction">绑定后，你可以与朋友分享足迹和体验。为了您的帐号安全，未绑定手机且绑定唯一第三方帐号的情况下，不允许解绑。</string>
    <string name="user_bind_email_text_test">2511575099@qq.com</string>
    <string name="user_bind_phone_text_test">12304560456</string>
    <string name="user_update_pw_text">密码修改</string>
    <string name="user_eliminate_text">清除缓存</string>
    <string name="user_weixin_bind">微信绑定</string>
    <string name="user_weibo_bind">微博绑定</string>
    <string name="user_region_text">地区</string>
    <string name="user_update_pwm_text">修改</string>
    <string name="user_return_login_text">已登录</string>
    <string name="user_item_name_alter_text">修改头像</string>
    <string name="user_item_head">头像</string>
    <string name="user_title_text">基本资料</string>
    <string name="user_title_text_z">个人设置</string>
    <string name="event_name">回声-艾利文雕塑展</string>
    <string name="event_venue_name">上海艺术馆</string>
    <string name="event_location">南京西路231人民公园7号</string>
    <string name="event_phone">21-0000111</string>
    <string name="event_time">04月04日-07月07日</string>
    <string name="event_money">费用:&#160;</string>
    <string name="event_event_reserve">活动预订</string>
    <string name="commint">提  交</string>
    <string name="publish">发 布</string>
    <string name="event_event_comment">点评</string>
    <string name="event_dateils_label">活动详情</string>
    <string name="event_comment_label">活动点评</string>
    <string name="event_dateils">上海当代艺术博物馆经过两年精心准备，于2012年十月一日隆重开馆试展，
        《海上生明月——中国近现代美术的起源》等系列展览及2012（第九届）上海双年展将分别作为两馆的开幕展览，
        上海世博会中国馆的“镇馆之宝”多媒体版《清明上河图》将“永驻”中华艺术宫。</string>
    <string name="title_activity_lable_choose">LableChooseActivity</string>
    <string name="text_cancel">取消</string>
    <string name="text_reset">重设</string>
    <string name="text_search">请输入关键字</string>
    <string name="search_personal">人群</string>
    <string name="search_mood">心情</string>
    <string name="search_personal_bachelordom">单身</string>
    <string name="search_personal_lovers">情侣</string>
    <string name="search_personal_firend">朋友</string>
    <string name="search_personal_parent">父母</string>
    <string name="search_mood_easy">轻松</string>
    <string name="search_mood_cure">治愈</string>
    <string name="search_mood_depressed">郁闷</string>
    <string name="search_mood_happy">开心</string>
    <string name="search_money">费用</string>
    <string name="search_time">时间</string>
    <string name="search_time_today">今天</string>
    <string name="search_time_tomorrow">明天</string>
    <string name="search_time_weekend">本周末</string>
    <string name="search_time_reserve">时间预订</string>
    <string name="search_location">位置</string>
    <string name="search_location_text1">闸北区</string>
    <string name="search_location_text2">宝山区</string>
    <string name="search_location_text3">嘉定区</string>
    <string name="search_location_text4">黄浦区</string>
    <string name="search_theme">主题</string>
    <string name="search_theme_exhibition">展览</string>
    <string name="search_theme_movie">影视</string>
    <string name="search_theme_musical">歌舞</string>
    <string name="search_theme_opera">戏曲</string>
    <string name="search_send">立 即 搜 索</string>
    <string name="dialog_cancel">取 消</string>
    <string name="dialog_tell_phone">呼 叫</string>
    <string name="dialog_ok">确 定</string>
    <string name="dialog_schedule_ok">预约成功！</string>
    <string name="dialog_schedule_ok_content">我们已将订票信息发送至您手机中，请查收</string>
    <string name="dialog_schedule_commitbtn_text">查 看 预 订</string>
    <string name="dialog_schedule_cancel_activitybtn_text">返 回 活 动</string>
    <string name="dialog_schedule_cancel_activity_text">查 看 订 单</string>
    <string name="dialog_schedule_cancel_activity">取 消 订 单！</string>
    <string name="dialog_schedule_cancel_vevuebtn_text">返 回 场 馆</string>
    <string name="dialog_schedule_cancel_vevue">取 消 预 约！</string>
    <string name="dialog_schedule_cancel">放 弃 取 消</string>
    <string name="dialog_schedule_cancel_z">取 消</string>
    <string name="dialog_schedule_cancel_z_ok">确 定</string>
    <string name="dialog_schedule_cancel_ok">继 续 取 消</string>
    <string name="start_time">起始</string>
    <string name="end_time">结束</string>
    <string name="calendar_time">2015年6月</string>
    <string name="dialog_birthday_title">编辑生日</string>
    <string name="title_activity_user_dialog">UserDialogActivity</string>
    <string name="dialog_birthday_50">50</string>
    <string name="dialog_fastlogin_regi_newaccount">注册新用户</string>
    <string name="dialog_forgotpw_title">找回密码</string>
    <string name="dialog_forgotpw_input_phone">输入11位手机号</string>
    <string name="dialog_forgotpw_input_getcode">获取验证码</string>
    <string name="dialog_findpw_input_newpw">输入新密码</string>
    <string name="dialog_findpw_input_truenewpw">确认新密码</string>
    <string name="dialog_register">注 册</string>
    <string name="dialog_update_linkname">输入7字以内的昵称</string>
    <string name="dialog_register_pw">输入6~12位密码</string>
    <string name="collect_event_title">刘德华2015年巡回演出</string>
    <string name="collect_event_content">闸北区广中西路777弄</string>
    <string name="event_time_b">2015-06-15 14:20</string>
    <string name="event_order_code_a">订单编号:&#160;</string>
    <string name="event_time_a">订单时间:&#160;</string>
    <string name="event_venue">场馆:&#160;</string>
    <string name="event_class">活动室:&#160;</string>
    <string name="event_text1">活动:&#160;</string>
    <string name="event_session">场次:&#160;</string>
    <string name="event_location_b">地址:&#160;</string>
    <string name="event_group">团体:&#160;</string>
    <string name="event_cost">免费</string>
    <string name="event_code">验证码:&#160;</string>
    <string name="event_venue_test">上海科技馆</string>
    <string name="event_class_test">3楼阶梯教室</string>
    <string name="event_group_test">黄浦区老年人歌舞艺术团</string>
    <string name="event_code_test">123456</string>
    <string name="venue_cancel_order">取 消 订 单</string>
    <string name="venue_num">人数:&#160;</string>
    <string name="venue_seat">座位：&#160;</string>
    <string name="my_event_comment_num">共有999+条评论</string>
    <string name="my_event_look">去看看</string>
</resources>