<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_order_code_a"
                android:textColor="@color/app_text_color" />

            <TextView
                android:id="@+id/my_venue_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="123456"
                android:textColor="@color/orange_3.1_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_time_a"
                android:textColor="@color/app_text_color" />

            <TextView
                android:id="@+id/my_venue_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/app_text_color" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/line_big_style" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_venue"
            android:textColor="@color/app_text_color"
            android:textSize="@dimen/my_event_title" />

        <TextView
            android:id="@+id/my_venue_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_venue_test"
            android:textColor="@color/app_text_color"
            android:textSize="@dimen/my_event_title" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <ImageView
            android:id="@+id/my_venue_img"
            android:layout_width="125dp"
            android:layout_height="75dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="3dp"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/my_venue_img"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/my_venue_text"
                    android:text="@string/event_class" />

                <TextView
                    android:id="@+id/my_venue_class"
                    style="@style/my_venue_text"
                    android:text="@string/event_class_test" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/my_venue_text"
                    android:text="@string/event_location_b" />

                <TextView
                    android:id="@+id/my_venue_location"
                    style="@style/my_venue_text"
                    android:singleLine="false"
                    android:text="@string/collect_event_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/my_venue_text"
                    android:text="@string/event_session" />

                <TextView
                    android:id="@+id/my_venue_session"
                    style="@style/my_venue_text"
                    android:singleLine="false"
                    android:text="@string/event_time_b" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/my_venue_text"
                    android:text="@string/event_group" />

                <TextView
                    android:id="@+id/my_venue_group"
                    style="@style/my_venue_text"
                    android:singleLine="false"
                    android:text="@string/event_group_test" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/my_venue_text"
                    android:text="@string/event_money" />

                <TextView
                    android:id="@+id/my_venue_cost"
                    style="@style/my_venue_text"
                    android:text="@string/event_cost" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/my_venue_text"
                    android:text="@string/event_code" />

                <TextView
                    android:id="@+id/my_venue_numbar"
                    style="@style/my_venue_text"
                    android:text="@string/event_code_test" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <View style="@style/line_small_style" />

    <ImageView
        android:id="@+id/erweima_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY" />

    <View style="@style/line_small_style" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/shape_orge_nullrect"
        android:paddingBottom="8dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="8dp"
        android:text="@string/venue_cancel_order"
        android:textColor="@color/orange_color" />

    <View style="@style/line_big_style" />

</LinearLayout>